--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -21,6 +21,7 @@
 
 $bp-largest: 75em; // 1200px / 16;
 $bp-large: 68.75em; // 1100px / 16;
+$bp-medium: 56.25em; // 900px / 16;
 
 // Global selector to default the page to 0 spacing
 
